--- a/Styles/Landingpage.scss
+++ b/Styles/Landingpage.scss
@@ -1,16 +1,17 @@
 @import "./config";
 @import "./scriptclass";
- 
+@import "./mediaQueries/Xsmall";
+@import "./mediaQueries/Medium";
 header{
     width: 100%;
     height: 10vh;
-    @include flexbox(row, center, center); 
+    @include flexbox(row, space-between, center); 
     background-color:#cc33ff;
 .Name{
 color: $color-pr;
 font-weight: 700;
 line-height: 1.5;
-font-size: 1.3rem;
+font-size: 1.5rem;
 width: 80%;
 padding: 1rem;
 letter-spacing: 0.05rem;
@@ -20,7 +21,7 @@ div.burger{
     color: white;
     cursor: pointer;
     position: relative;
-
+    margin-right: 1rem;
     .burger-open,
     .burger-close{ 
        position: absolute;
@@ -42,13 +43,13 @@ nav{
     @include flexbox(column, space-around, center);
     height: 90vh;
   background: linear-gradient(to bottom, #6666ff 0%, #cc33ff 100%);
-    font-size: 2rem;
+    font-size: 1.5rem;
     opacity: 0;
     transform: scale(0);
     transform-origin: top right;
     pointer-events: none;
     display: none;
-
+    padding-top: 3rem;
     ul li{
         list-style: none;
      padding-bottom: 50%;
@@ -65,64 +66,98 @@ nav{
 
 section.d-catch{
 width: 100%;
-height: 10vh;
+margin-top: 10vh;
+height: 70vh;
 position:relative;
 
+.landingSection{
+    position: relative;
+    width: 100%;
+    height: 80vh;
+img{
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
+   position: absolute;
+   opacity: 0.8;
+   &:hover{
+       transform: scale(1.03);
+   }
+ }
+.backgroundCover{
+    width: 100%;
+    height: 80%;
+    background-color: rgb(48, 44, 53);
+    position: absolute;
+    opacity: 0.9;
+}
+}
+
+.text-upon{
+    z-index: 100;
+    opacity: 1;
+    height: 80%;
+    width: 100%;
+    left: 50%;
+    .catchy-text{
+        position: absolute;
+        left:50%;
+        top: 10%;
+        transform: translate(-50%, -10%);
+        color: white;
+        font-size: 1.5rem;
+    }
 div.care{
     position: absolute;
-    left: 15%;
-    top: 50%;
-  color: #6666ff;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%, -60%);
+  color: white;
   line-height: 3rem;
-  font-size: 300;
-  width: 30%;
+  font-size: 2rem;
+  width: 100%;
   text-align: center;
  }
  
  button{
      position: absolute;
-     right: 10%;
-     top: 50%;
-     width: 8rem;
+     left: 50%;
+    top: 70%;
+     width: 9rem;
      height: 4rem;
-     border-radius: 5px;
+     border-radius: 15px;
      background-color: #6666ff;
      color: white;
-     //outline: none;
+     outline: none;
      border: none;
-     font-size: large;
      cursor: pointer;
      line-height: 1.2;
-    
- .partner-text{
-      font-size: 1.2rem;
-   }
-     :hover{
+    transform: translateX(-50%);
+    &:hover{
          transform: scale(0.95);
      }
+     svg{
+         font-size: 1.5rem;
+     }
+ .partner-text{
+      font-size: 1.4rem;
+      letter-spacing: 0.1rem;
+   }
+     
   
+}
 }
 }
 section.section-1{
 @include flexbox( column, center, center);
-  margin-top: 4rem;
-  width: 100%;
-  
-img{
-    width: 100%;
-    height: 370px;
-    object-fit: cover;
-   &:hover{
-       transform: scale(1.03);
-   }
- 
-}
+  width: 100%;  
+
 .Vision-Mission{
     border: 3px solid rgb(173, 114, 228);
     border-radius: 10px;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
     margin-top: 2rem;
-    width: 80%;
+    width: 90%;
     h4{
         text-align: center;
         border-bottom: 1px solid blueviolet;
@@ -139,8 +174,8 @@ section.section-2{
    @include flexbox(column, center, center);
    border: 3px solid rgb(173, 114, 228);
    border-radius: 10px;
-   width: 80%;
-    margin: 4rem auto;
+   width: 90%;
+    margin: 6rem auto 0 auto;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
     padding: 0.5rem;
     h4{
@@ -200,8 +235,8 @@ section.section-3{
     border: 3px solid rgb(173, 114, 228);
     border-radius: 10px;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
-    margin-top: 2rem;
-    width: 80%;
+    margin-top: 6rem;
+    width: 90%;
 h4{
     text-align: center;
     border-bottom: 1px solid blueviolet;
@@ -216,14 +251,13 @@ section.section-4{
    // @extend section.section-1;
     border: 3px solid rgb(173, 114, 228);
     border-radius: 10px;
-    width: 80%;
-    margin: 4rem auto;
+    width: 90%;
+    margin: 6rem auto;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
     padding: 0.5rem;
      //height: 400px; 
     h4{
         border-bottom:  1px solid blueviolet;
-        margin-top: 1rem;
         text-align: center;
         font-size: larger;
 
@@ -272,22 +306,84 @@ footer{
    color: white;
    width: 100%;
    address{
-        @include flexbox (column, center, center);
+      margin: 1.5rem 1.8rem;
+      text-decoration: none;
+
 a{
     text-decoration: none;
-    list-style-type: none;
+    list-style: none;
 color: rgb(254, 254, 255);
     &:hover{
         border-bottom: 1px solid white;
     }
 }
+.contact-info{
+.h4{
+    //font-size: 1.5rem;
+    line-height: 1.5;
+    letter-spacing: .1rem;
+}
+div{
+    font-size: 1.1rem;
+    letter-spacing: .1rem;
+    margin-top: .5rem;
+}
+}
+.location{
+    margin-top: 1.2rem;
+    .h4{
+      //  font-size: 1.5rem;
+    line-height: 1.5;
+    letter-spacing: .1rem;
+    }
+    div{
+      font-size: 1.1rem;  
+      letter-spacing: .1rem;
+      margin-top: .5rem;
+    }
+}
+
+    }
+    .short-message{
+        margin: 1.5rem 1.8rem; 
+         width: 100%;
+         display: flex;
+        input{
+        height: 3rem;
+        width: 70%;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        padding: 5px;
+        font-size: 1.5rem;
+        }
+        button{
+            outline: none;
+            border: none;
+            background: none;
+            color:rgb(213, 213, 223);
+            font-size: 2rem;
+            padding: 0px 6px;
+            cursor: pointer;
+        }
+    }
+    .social-icons{
+        @include flexbox (row, space-between, center);
+        width: 50%;
+        margin: 1.8rem auto 0.5rem auto;
+        font-size: 1.5rem;
+        cursor: pointer;
+        svg{
+         &:hover{
+            transform: translateY(-5px);
+        }
+    }
     }
   
    .copyright{
        background-color: white;
        color: blueviolet;
-      // width: 100%;
-      // text-align: center;
+      text-align: center;
    }
 }
 
