--- a/Styles/_config.scss
+++ b/Styles/_config.scss
@@ -7,7 +7,7 @@ $color-pr: rgb(252, 252, 252);
 body{
    font-family: "Poppins" , sans-serif; 
    color: blueviolet;
-  min-width: 100vw;
+  min-width: 100%;
    overflow-x: hidden;
 
 }
@@ -17,32 +17,36 @@ body{
     justify-content: $jc-c;
     align-items: $al-c;
 }
-
+div.circle-theory{
+  //  width: 100%;
+    //overflow-x:hidden;
 .circle-1{
-    height: 650px;
-    width: 650px;
+    height: 100%;
+    width: 200%;
+    //overflow-x: hidden;
     color: blueviolet;
    background-color: rgba(168, 62, 182, 0.3);
    border-radius: 50%;
    position: absolute;
-   left: 100%;
-   top: 5%;
-   transform: translate(-50%);
+   left: 30%;
+   top: 0%;
+  // transform: translate(-50%);
    z-index: -5; 
 }
 .circle-2{
     @extend .circle-1;
-    height: 750px;
-    width: 750px;
-    left: -20%;
-    top: 90%;
+    height: 100%;
+    width: 200%;
+    left: -120%;
+    top: 110%;
     background-color: rgba(102, 102, 255, 0.2);
 }
 .circle-3{
     @extend .circle-1;
-     height: 850px;
-    width: 850px;
-    left: 150%;
-    top: 170%;
+    height: 100%;
+    width: 200%;
+    left: 30%;
+    top: 220%;
     background-color: rgba(168, 62, 182, 0.3);
+}
 }
