--- a/Styles/_scriptclass.scss
+++ b/Styles/_scriptclass.scss
@@ -1,19 +1,18 @@
 .burger-close{
     opacity: 0;
     pointer-events: none;
-    //display: block;
 }
-// .burgerClosed{
-// opacity: 1;
-// pointer-events: all;
-// }
 
 .nav-toggled{
     display: flex;
     opacity: 1;
     transform: scale(1);
     pointer-events: all;
- // overflow-y: hidden;
+    position: fixed;
+    z-index: 100;
+    width: 90%;
+    height: 80%;
+    left: 10%;
 }
 
 
