--- a/Styles/Landingpage.css
+++ b/Styles/Landingpage.css
@@ -50,14 +50,17 @@ div.circle-theory .circle-3 {
   display: -ms-flexbox;
   display: flex;
   opacity: 1;
-  -webkit-transform: scale(1);
-          transform: scale(1);
   pointer-events: all;
   position: fixed;
   z-index: 100;
   width: 90%;
   height: 80%;
   left: 10%;
+}
+
+nav ul li.active {
+  border: 1px solid blue !important;
+  background: blue;
 }
 
 @media only screen and (max-width: 390px) {
@@ -110,7 +113,7 @@ div.circle-theory .circle-3 {
   }
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 600px) {
   header .Name {
     font-size: 2.5rem !important;
     letter-spacing: .01rem;
@@ -142,7 +145,7 @@ div.circle-theory .circle-3 {
     line-height: 1.5;
   }
   .Vision-Mission h4, .section-2 h4, .historyPane h4 {
-    font-size: 3rem !important;
+    font-size: 2rem !important;
     padding: 1.2rem;
     border-bottom: 2px solid blueviolet;
   }
@@ -177,7 +180,7 @@ div.circle-theory .circle-3 {
     width: 80% !important;
   }
   section.section-4 h4 {
-    font-size: 3rem !important;
+    font-size: 2rem !important;
     border-bottom: 2px solid blueviolet;
   }
   section.section-4 .testimony-head {
@@ -190,7 +193,7 @@ div.circle-theory .circle-3 {
   section.section-4 .testimony-head span {
     font-size: 2rem !important;
     top: 40% !important;
-    left: 40% !important;
+    left: 50% !important;
     -webkit-transform: translate(-40% -40%) !important;
             transform: translate(-40% -40%) !important;
   }
@@ -198,26 +201,132 @@ div.circle-theory .circle-3 {
     font-size: 1.5rem !important;
     padding: 1rem;
   }
+  footer address {
+    margin: 2.5rem 3rem !important;
+  }
+  footer address .contact-info {
+    margin-top: 2rem;
+    font-weight: lighter;
+  }
+  footer address .contact-info .h4 {
+    font-size: 1.8rem !important;
+    line-height: 2;
+    letter-spacing: .3rem;
+  }
+  footer address .contact-info div {
+    font-size: 1.3rem !important;
+    letter-spacing: .3rem;
+    margin-top: 1.2rem;
+  }
+  footer address .location {
+    margin-top: 2rem;
+    font-weight: lighter;
+  }
+  footer address .location .h4 {
+    font-size: 1.8rem !important;
+    line-height: 1.5;
+    letter-spacing: .1rem;
+  }
+  footer address .location div {
+    font-size: 1.3rem !important;
+    letter-spacing: .1rem;
+    margin-top: .5rem;
+  }
+  footer .short-message {
+    margin: 2.5rem 3rem 1rem !important;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  footer .short-message input {
+    height: 4rem !important;
+    width: 80% !important;
+    padding: 1rem !important;
+    font-size: 2rem !important;
+  }
+  footer .social-icons {
+    font-size: 2.5rem !important;
+    margin-top: 3rem !important;
+  }
+  footer .copyright {
+    font-size: 1.5rem !important;
+  }
   div.circle-theory .circle-1, div.circle-theory .circle-2, div.circle-theory .circle-3 {
-    height: 100%;
+    height: 120%;
     width: 200%;
   }
   div.circle-theory .circle-2 {
-    height: 100%;
+    height: 120%;
     width: 200%;
     top: 100%;
     left: -150%;
   }
   div.circle-theory .circle-3 {
-    height: 100%;
+    height: 120%;
     width: 200%;
-    top: 180%;
+    top: 200%;
     left: 50%;
   }
   .nav-toggled {
     width: 80%;
     height: 80%;
     left: 25%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  div.testimony-head span.testifiers-name {
+    font-size: 2.2rem !important;
+    left: 40% !important;
+    top: 40%;
+    -webkit-transform: translateY(-40%);
+            transform: translateY(-40%);
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  header {
+    display: block !important;
+    height: 80px !important;
+  }
+  header .Name {
+    width: 60% !important;
+    height: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header div.burger {
+    display: none;
+  }
+  nav {
+    display: block !important;
+    width: 40% !important;
+    height: 10vh !important;
+    font-size: small !important;
+    position: absolute;
+    left: 58%;
+    top: -1rem;
+    background: none !important;
+    pointer-events: all !important;
+  }
+  nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -242,12 +351,12 @@ header {
 
 header .Name {
   color: #fcfcfc;
-  font-weight: 700;
   line-height: 1.5;
   font-size: 1.5rem;
   width: 80%;
   padding: 1rem;
   letter-spacing: 0.05rem;
+  font-weight: lighter;
 }
 
 header div.burger {
@@ -291,9 +400,6 @@ nav {
   background: -webkit-gradient(linear, left top, left bottom, from(#6666ff), to(#cc33ff));
   background: linear-gradient(to bottom, #6666ff 0%, #cc33ff 100%);
   font-size: 1.5rem;
-  opacity: 0;
-  -webkit-transform: scale(0);
-          transform: scale(0);
   -webkit-transform-origin: top right;
           transform-origin: top right;
   pointer-events: none;
