--- a/Styles/Landingpage.css
+++ b/Styles/Landingpage.css
@@ -40,42 +40,12 @@ div.circle-theory .circle-3 {
   background-color: rgba(168, 62, 182, 0.3);
 }
 
-.burger-close {
-  opacity: 0;
-  pointer-events: none;
-}
-
 .nav-toggled {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  opacity: 1;
-  pointer-events: all;
-  position: fixed;
-  z-index: 100;
-  width: 90%;
-  height: 80%;
-  left: 10%;
-}
-
-nav ul li.active {
-  border: 1px solid blue !important;
-  background: blue;
+  -webkit-transform: translateX(0%) !important;
+          transform: translateX(0%) !important;
 }
 
 @media only screen and (max-width: 390px) {
-  header {
-    width: 100%;
-  }
-  header .Name {
-    font-size: 1.3rem !important;
-  }
-  header div.burger {
-    margin-right: .5rem;
-  }
-  nav {
-    padding-top: 3rem;
-  }
   section.d-catch span.catchy-text {
     font-size: 1.2rem !important;
     top: 5%;
@@ -101,13 +71,6 @@ nav ul li.active {
 }
 
 @media only screen and (max-width: 350px) {
-  header {
-    height: 20vh !important;
-  }
-  nav {
-    height: 80vh !important;
-    font-size: 1.2rem !important;
-  }
   section.d-catch span.catchy-text {
     display: none;
   }
@@ -286,53 +249,42 @@ nav ul li.active {
 }
 
 @media only screen and (min-width: 992px) {
-  header {
-    display: block !important;
-    height: 80px !important;
+  header nav {
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
   }
-  header .Name {
+  header nav .brand {
     width: 60% !important;
-    height: 80px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
-  header div.burger {
+  header nav div.burger {
     display: none;
   }
-  nav {
-    display: block !important;
-    width: 40% !important;
+  header nav ul.nav-items {
+    top: 0vh !important;
     height: 10vh !important;
-    font-size: small !important;
-    position: absolute;
-    left: 58%;
-    top: -1rem;
-    background: none !important;
-    pointer-events: all !important;
-  }
-  nav ul {
+    width: 40% !important;
+    background: none;
+    color: white;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-transform: translateX(0%) !important;
+            transform: translateX(0%) !important;
+    font-size: small;
   }
 }
 
-header {
-  width: 100%;
-  height: 10vh;
+nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -340,50 +292,31 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  min-height: 10vh;
+  width: 100%;
   background-color: #cc33ff;
-}
-
-header .Name {
-  color: #fcfcfc;
-  line-height: 1.5;
-  font-size: 1.5rem;
-  width: 80%;
-  padding: 1rem;
-  letter-spacing: 0.05rem;
-  font-weight: lighter;
-}
-
-header div.burger {
   color: white;
+}
+
+nav div.burger {
   cursor: pointer;
-  position: relative;
-  margin-right: 1rem;
 }
 
-header div.burger .burger-open,
-header div.burger .burger-close {
+nav ul.nav-items {
   position: absolute;
-  height: 1.3rem;
-  width: 1.3rem;
-  top: -12px;
-  right: 1px;
+  right: 0;
+  top: 10vh;
+  height: 80vh;
+  width: 90%;
+  background: -webkit-gradient(linear, left top, left bottom, from(#6666ff), to(#cc33ff));
+  background: linear-gradient(to bottom, #6666ff 0%, #cc33ff 100%);
+  z-index: 100;
   color: white;
-  pointer-events: all;
-}
-
-header div.burger .burger-open :hover,
-header div.burger .burger-close :hover {
-  -webkit-transform: scale(0.98);
-          transform: scale(0.98);
-}
-
-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -391,34 +324,31 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 90vh;
-  background: -webkit-gradient(linear, left top, left bottom, from(#6666ff), to(#cc33ff));
-  background: linear-gradient(to bottom, #6666ff 0%, #cc33ff 100%);
-  font-size: 1.5rem;
-  -webkit-transform-origin: top right;
-          transform-origin: top right;
-  pointer-events: none;
-  display: none;
-  padding-top: 3rem;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
 }
 
-nav ul li {
+nav ul.nav-items li {
   list-style: none;
-  padding-bottom: 50%;
+  color: white;
 }
 
-nav ul li a {
+nav ul.nav-items li a {
   text-decoration: none;
-  color: #fefeff;
+  color: white;
 }
 
-nav ul li a :hover {
-  border-bottom: 2px solid white;
+nav ul.nav-items li a:hover {
+  border-bottom: 1px solid #a7a1a1;
 }
 
 section.d-catch {
