--- a/Styles/Landingpage.css
+++ b/Styles/Landingpage.css
@@ -45,6 +45,31 @@ div.circle-theory .circle-3 {
           transform: translateX(0%) !important;
 }
 
+section.section-2,
+section.section-4 {
+  position: relative;
+}
+
+section.section-2 div.prev, section.section-2 div.prev2,
+section.section-4 div.prev,
+section.section-4 div.prev2 {
+  position: absolute;
+  height: 80%;
+  width: 50%;
+  left: 0;
+  top: 20%;
+}
+
+section.section-2 div.next, section.section-2 div.next2,
+section.section-4 div.next,
+section.section-4 div.next2 {
+  position: absolute;
+  height: 80%;
+  width: 50%;
+  left: 50%;
+  top: 20%;
+}
+
 @media only screen and (max-width: 390px) {
   section.d-catch span.catchy-text {
     font-size: 1.2rem !important;
@@ -164,57 +189,6 @@ div.circle-theory .circle-3 {
     font-size: 1.5rem !important;
     padding: 1rem;
   }
-  footer address {
-    margin: 2.5rem 3rem !important;
-  }
-  footer address .contact-info {
-    margin-top: 2rem;
-    font-weight: lighter;
-  }
-  footer address .contact-info .h4 {
-    font-size: 1.8rem !important;
-    line-height: 2;
-    letter-spacing: .3rem;
-  }
-  footer address .contact-info div {
-    font-size: 1.3rem !important;
-    letter-spacing: .3rem;
-    margin-top: 1.2rem;
-  }
-  footer address .location {
-    margin-top: 2rem;
-    font-weight: lighter;
-  }
-  footer address .location .h4 {
-    font-size: 1.8rem !important;
-    line-height: 1.5;
-    letter-spacing: .1rem;
-  }
-  footer address .location div {
-    font-size: 1.3rem !important;
-    letter-spacing: .1rem;
-    margin-top: .5rem;
-  }
-  footer .short-message {
-    margin: 2.5rem 3rem 1rem !important;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  footer .short-message input {
-    height: 4rem !important;
-    width: 80% !important;
-    padding: 1rem !important;
-    font-size: 2rem !important;
-  }
-  footer .social-icons {
-    font-size: 2.5rem !important;
-    margin-top: 3rem !important;
-  }
-  footer .copyright {
-    font-size: 1.5rem !important;
-  }
   div.circle-theory .circle-1, div.circle-theory .circle-2, div.circle-theory .circle-3 {
     height: 120%;
     width: 200%;
@@ -281,6 +255,147 @@ div.circle-theory .circle-3 {
     -webkit-transform: translateX(0%) !important;
             transform: translateX(0%) !important;
     font-size: small;
+  }
+  section.d-catch .landingSection img {
+    height: 100% !important;
+  }
+  section.d-catch .landingSection img:hover {
+    -webkit-transform: scale(1.06 !important);
+            transform: scale(1.06 !important);
+  }
+  section.d-catch .landingSection .backgroundCover {
+    height: 100% !important;
+  }
+  section.d-catch .text-upon .catchy-text {
+    width: 40% !important;
+    left: 20% !important;
+    top: 40% !important;
+    -webkit-transform: translate(-20%, -40%) !important;
+            transform: translate(-20%, -40%) !important;
+  }
+  section.d-catch .text-upon div.care {
+    left: 90% !important;
+    top: 40% !important;
+    width: 40% !important;
+    -webkit-transform: translate(-90%, -40%) !important;
+            transform: translate(-90%, -40%) !important;
+  }
+  section.d-catch .text-upon button {
+    width: 14rem !important;
+    height: 6rem !important;
+  }
+  main {
+    margin-top: 10rem;
+  }
+  footer div.contact-info,
+  footer div.location {
+    margin: 0  2.5rem !important;
+    padding-top: 1.5rem;
+  }
+  footer div.contact-info .h4,
+  footer div.location .h4 {
+    font-size: 1.4rem;
+  }
+  footer div.contact-info .contact-info-content,
+  footer div.contact-info .location-content,
+  footer div.location .contact-info-content,
+  footer div.location .location-content {
+    font-size: 1.7rem;
+  }
+  footer div.contact-info .contact-info-content a,
+  footer div.contact-info .location-content a,
+  footer div.location .contact-info-content a,
+  footer div.location .location-content a {
+    text-decoration: none;
+    color: white;
+  }
+  footer div.short-message {
+    margin: 0  2.5rem !important;
+  }
+  footer div.short-message .h4 {
+    font-size: 1.4rem;
+  }
+  footer div.Dev {
+    margin: 0  2.5rem !important;
+  }
+  footer div.Dev .h4 {
+    font-size: 1.4rem;
+  }
+  footer div.Dev .dev-content {
+    margin-top: .8rem;
+    font-size: 1.7rem;
+  }
+  footer .social-icons {
+    margin: 0  2.5rem !important;
+  }
+  footer .social-icons .h4 {
+    font-size: 1.4rem;
+  }
+  footer .social-icons div.socialIcon svg {
+    font-size: 2rem !important;
+    margin-top: .8rem;
+  }
+  footer .copyright {
+    font-size: 1.4rem;
+  }
+}
+
+@media only screen and (orientation: landscape) and (min-width: 550px) {
+  section.d-catch .landingSection img {
+    height: 100% !important;
+  }
+  section.d-catch .landingSection img:hover {
+    -webkit-transform: scale(1.06 !important);
+            transform: scale(1.06 !important);
+  }
+  section.d-catch .landingSection .backgroundCover {
+    height: 100% !important;
+  }
+  section.d-catch .text-upon .catchy-text {
+    width: 40% !important;
+    left: 20% !important;
+    top: 40% !important;
+    -webkit-transform: translate(-20%, -40%) !important;
+            transform: translate(-20%, -40%) !important;
+    font-size: 1.2rem;
+  }
+  section.d-catch .text-upon div.care {
+    left: 90% !important;
+    top: 40% !important;
+    width: 40% !important;
+    -webkit-transform: translate(-90%, -40%) !important;
+            transform: translate(-90%, -40%) !important;
+  }
+  section.d-catch .text-upon button {
+    width: 12rem !important;
+    height: 4rem !important;
+    top: 85% !important;
+  }
+  section.d-catch .text-upon button svg {
+    font-size: 1.3rem !important;
+  }
+  section.d-catch .text-upon button .partner-text {
+    font-size: 1.3rem !important;
+  }
+  main {
+    margin-top: 7rem !important;
+  }
+  div.circle-theory .circle-1, div.circle-theory .circle-2, div.circle-theory .circle-3 {
+    height: 850px !important;
+    width: 850px;
+    left: 60%;
+  }
+  div.circle-theory .circle-2 {
+    height: 1050px !important;
+    width: 1050px;
+    left: -90%;
+    top: 170%;
+  }
+  div.circle-theory .circle-3 {
+    height: 1050px !important;
+    width: 1050px;
+    top: 450% !important;
+    left: 60%;
   }
 }
 
@@ -369,6 +484,8 @@ section.d-catch .landingSection img {
   height: 80%;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: 50% 20%;
+     object-position: 50% 20%;
   position: absolute;
   opacity: 0.8;
 }
@@ -389,9 +506,8 @@ section.d-catch .landingSection .backgroundCover {
 section.d-catch .text-upon {
   z-index: 100;
   opacity: 1;
-  height: 80%;
+  height: 100%;
   width: 100%;
-  left: 50%;
 }
 
 section.d-catch .text-upon .catchy-text {
@@ -412,7 +528,7 @@ section.d-catch .text-upon div.care {
           transform: translate(-50%, -60%);
   color: white;
   line-height: 3rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 100%;
   text-align: center;
 }
@@ -432,11 +548,6 @@ section.d-catch .text-upon button {
   line-height: 1.2;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-}
-
-section.d-catch .text-upon button:hover {
-  -webkit-transform: scale(0.95);
-          transform: scale(0.95);
 }
 
 section.d-catch .text-upon button svg {
@@ -607,7 +718,7 @@ section.section-4 div.testimoniesContainer {
   margin: 2rem auto;
   border-radius: 10px;
   padding: 0.5rem;
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, 0.795);
 }
 
 section.section-4 div.testimoniesContainer .testimony-1 {
@@ -616,7 +727,6 @@ section.section-4 div.testimoniesContainer .testimony-1 {
 
 section.section-4 div.testimoniesContainer .testimony-1 .testimony-head {
   height: 30%;
-  background: #e9eeee;
   border-radius: 10px;
   position: relative;
 }
@@ -643,68 +753,69 @@ footer {
   background-color: #6666ff;
   color: white;
   width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[4];
+      grid-template-rows: repeat(4, auto);
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
 }
 
-footer address {
-  margin: 1.5rem 1.8rem;
-  text-decoration: none;
+footer div.contact-info,
+footer div.location {
+  margin: 0  1.8rem;
+  padding-top: 1.5rem;
 }
 
-footer address a {
-  text-decoration: none;
-  list-style: none;
-  color: #fefeff;
-}
-
-footer address a:hover {
-  border-bottom: 1px solid white;
-}
-
-footer address .contact-info .h4 {
+footer div.contact-info .h4,
+footer div.location .h4 {
   line-height: 1.5;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
+  opacity: 0.6;
 }
 
-footer address .contact-info div {
-  font-size: 1.1rem;
-  letter-spacing: .1rem;
-  margin-top: .5rem;
+footer div.contact-info .contact-info-content,
+footer div.contact-info .location-content,
+footer div.location .contact-info-content,
+footer div.location .location-content {
+  margin-top: .8rem;
 }
 
-footer address .location {
-  margin-top: 1.2rem;
+footer div.contact-info .contact-info-content a,
+footer div.contact-info .location-content a,
+footer div.location .contact-info-content a,
+footer div.location .location-content a {
+  text-decoration: none;
+  color: white;
 }
 
-footer address .location .h4 {
-  line-height: 1.5;
-  letter-spacing: .1rem;
-}
-
-footer address .location div {
-  font-size: 1.1rem;
-  letter-spacing: .1rem;
-  margin-top: .5rem;
-}
-
-footer .short-message {
-  margin: 1.5rem 1.8rem;
+footer div.short-message {
+  margin-left: 1.8rem;
+  margin-top: 1.5rem;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
 }
 
-footer .short-message input {
-  height: 3rem;
+footer div.short-message .h4 {
+  line-height: 1.5;
+  letter-spacing: 0.1rem;
+  opacity: 0.6;
+}
+
+footer div.short-message input {
+  height: 2.5rem;
+  margin-top: 1.5rem;
   width: 70%;
   border: none;
   outline: none;
-  border-radius: 10px;
-  padding: 5px;
+  border-radius: 20px;
+  padding-left: 10px;
   font-size: 1.5rem;
 }
 
-footer .short-message button {
+footer div.short-message button {
   outline: none;
   border: none;
   background: none;
@@ -714,7 +825,34 @@ footer .short-message button {
   cursor: pointer;
 }
 
+footer div.Dev {
+  margin-left: 1.8rem;
+  padding-top: 1.5rem;
+}
+
+footer div.Dev .h4 {
+  line-height: 1.5;
+  letter-spacing: 0.1rem;
+  opacity: 0.6;
+}
+
+footer div.Dev .dev-content {
+  margin-top: .8rem;
+}
+
 footer .social-icons {
+  margin: 1.8rem;
+  padding-top: 1.5rem;
+}
+
+footer .social-icons .h4 {
+  line-height: 1.5;
+  letter-spacing: 0.1rem;
+  opacity: 0.6;
+}
+
+footer .social-icons div.socialIcon {
+  margin-top: .8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -728,20 +866,28 @@ footer .social-icons {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 50%;
-  margin: 1.8rem auto 0.5rem auto;
-  font-size: 1.5rem;
-  cursor: pointer;
+  margin-top: 0.5rem;
 }
 
-footer .social-icons svg:hover {
+footer .social-icons div.socialIcon svg {
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+footer .social-icons div.socialIcon svg:hover {
   -webkit-transform: translateY(-5px);
           transform: translateY(-5px);
 }
 
 footer .copyright {
-  background-color: white;
-  color: blueviolet;
+  line-height: 1.5;
+  letter-spacing: .1rem;
+  opacity: .7;
+  margin-top: 2rem;
+  color: whitesmoke;
   text-align: center;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
 }
 /*# sourceMappingURL=Landingpage.css.map */
