--- a/Styles/Landingpage.scss
+++ b/Styles/Landingpage.scss
@@ -2,369 +2,373 @@
 @import "./scriptclass";
 @import "./mediaQueries/Xsmall";
 @import "./mediaQueries/Medium";
- @import "./mediaQueries/XLandL";
+@import "./mediaQueries/XLandL";
 
+nav {
+  @include flexbox(row, space-around, center);
+  min-height: 10vh;
+  width: 100%;
+  background-color: #cc33ff;
+  color: white;
 
-nav{
-    @include flexbox(row, space-around,center);
-    min-height: 10vh;
-    width: 100%;
-    background-color: #cc33ff;
+  div.burger {
+    cursor: pointer;
+  }
+  ul.nav-items {
+    position: absolute;
+    right: 0;
+    top: 10vh;
+    height: 80vh;
+    width: 90%;
+    background: linear-gradient(to bottom, #6666ff 0%, #cc33ff 100%);
+    z-index: 100;
     color: white;
-   
-    div.burger{
-        cursor:pointer;
-    }
-    ul.nav-items{
-        position: absolute; 
-        right: 0;
-        top: 10vh;
-        height: 80vh;
-        width: 90%;
-        background: linear-gradient(to bottom, #6666ff 0%, #cc33ff 100%);
-        z-index: 100;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.5s ease;
+    li {
+      list-style: none;
+      color: white;
+      a {
+        text-decoration: none;
         color: white;
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       justify-content: space-around;
-       transform: translateX(100%);
-       transition: transform 0.5s ease;
-       li{
-           list-style: none;
-           color: white;
-           a{
-               text-decoration: none;
-               color: white;
-         &:hover{
-             border-bottom: 1px solid rgb(167, 161, 161);
-         }
-           }
-       }
+        &:hover {
+          border-bottom: 1px solid rgb(167, 161, 161);
+        }
+      }
     }
+  }
 }
 
+section.d-catch {
+  width: 100%;
+  margin-top: 10vh;
+  height: 70vh;
+  position: relative;
 
-
-section.d-catch{
-width: 100%;
-margin-top: 10vh;
-height: 70vh;
-position:relative;
-
-.landingSection{
+  .landingSection {
     position: relative;
     width: 100%;
     height: 80vh;
-img{
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
-   position: absolute;
-   opacity: 0.8;
-   &:hover{
-       transform: scale(1.03);
-   }
- }
-.backgroundCover{
-    width: 100%;
-    height: 80%;
-    background-color: rgb(48, 44, 53);
-    position: absolute;
-    opacity: 0.9;
-}
-}
+    img {
+      width: 100%;
+      height: 80%;
+      object-fit: cover;
+      object-position: 50% 20%;
+      position: absolute;
+      opacity: 0.8;
+      &:hover {
+        transform: scale(1.03);
+      }
+    }
+    .backgroundCover {
+      width: 100%;
+      height: 80%;
+      background-color: rgb(48, 44, 53);
+      position: absolute;
+      opacity: 0.9;
+    }
+  }
 
-.text-upon{
+  .text-upon {
     z-index: 100;
     opacity: 1;
-    height: 80%;
+    height: 100%;
     width: 100%;
-    left: 50%;
-    .catchy-text{
-        position: absolute;
-        left:50%;
-        top: 10%;
-        transform: translate(-50%, -10%);
-        color: white;
-        font-size: 1.5rem;
+    .catchy-text {
+      position: absolute;
+      left: 50%;
+      top: 10%;
+      transform: translate(-50%, -10%);
+      color: white;
+      font-size: 1.5rem;
     }
-div.care{
-    position: absolute;
-    left: 50%;
-    top: 60%;
-    transform: translate(-50%, -60%);
-  color: white;
-  line-height: 3rem;
-  font-size: 2rem;
-  width: 100%;
-  text-align: center;
- }
- 
- button{
-     position: absolute;
-     left: 50%;
-    top: 70%;
-     width: 9rem;
-     height: 4rem;
-     border-radius: 15px;
-     background-color: #6666ff;
-     color: white;
-     outline: none;
-     border: none;
-     cursor: pointer;
-     line-height: 1.2;
-    transform: translateX(-50%);
-    &:hover{
-         transform: scale(0.95);
-     }
-     svg{
-         font-size: 1.5rem;
-     }
- .partner-text{
-      font-size: 1.4rem;
-      letter-spacing: 0.1rem;
-   }
-     
-  
-}
-}
-}
-section.section-1{
-@include flexbox( column, center, center);
-  width: 100%;  
+    div.care {
+      position: absolute;
+      left: 50%;
+      top: 60%;
+      transform: translate(-50%, -60%);
+      color: white;
+      line-height: 3rem;
+      font-size: 1.5rem;
+      width: 100%;
+      text-align: center;
+    }
 
-.Vision-Mission{
+    button {
+      position: absolute;
+      left: 50%;
+      top: 70%;
+      width: 9rem;
+      height: 4rem;
+      border-radius: 15px;
+      background-color: #6666ff;
+      color: white;
+      outline: none;
+      border: none;
+      cursor: pointer;
+      line-height: 1.2;
+      transform: translateX(-50%);
+       
+      svg {
+        font-size: 1.5rem;
+      }
+      .partner-text {
+        font-size: 1.4rem;
+        letter-spacing: 0.1rem;
+      }
+    }
+  }
+}
+section.section-1 {
+  @include flexbox(column, center, center);
+  width: 100%;
+
+  .Vision-Mission {
     border: 3px solid rgb(173, 114, 228);
     border-radius: 10px;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
     margin-top: 2rem;
     width: 90%;
-    h4{
-        text-align: center;
-        border-bottom: 1px solid blueviolet;
-        line-height: 2rem;
-        font-size: larger;
-        }
-}
-div{
+    h4 {
+      text-align: center;
+      border-bottom: 1px solid blueviolet;
+      line-height: 2rem;
+      font-size: larger;
+    }
+  }
+  div {
     padding: 5px 1rem;
-}
+  }
 }
 
-section.section-2{
-   @include flexbox(column, center, center);
-   border: 3px solid rgb(173, 114, 228);
-   border-radius: 10px;
-   width: 90%;
-    margin: 6rem auto 0 auto;
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
-    padding: 0.5rem;
-    h4{
-        text-align: center;
-        line-height: 2rem;
-        font-size: larger;
-        border-bottom: 1px solid blueviolet;
-        width: 100%;
-    }
-    svg.Calender{
-  //  height: 100%;
+section.section-2 {
+  @include flexbox(column, center, center);
+  border: 3px solid rgb(173, 114, 228);
+  border-radius: 10px;
+  width: 90%;
+  margin: 6rem auto 0 auto;
+  box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
+  padding: 0.5rem;
+  h4 {
+    text-align: center;
+    line-height: 2rem;
+    font-size: larger;
+    border-bottom: 1px solid blueviolet;
+    width: 100%;
+  }
+  svg.Calender {
+    //  height: 100%;
     width: 250px;
     padding-top: 2rem;
-  //transform: translateX(-50%);
-
-}
-.eventContent{
+    //transform: translateX(-50%);
+  }
+  .eventContent {
     position: relative;
- color: antiquewhite;
-  .month{
+    color: antiquewhite;
+    .month {
       font-size: 2rem;
-     position: absolute;
-     top: -230px;
-     left: -35px;
-     color: antiquewhite;
-  }
-  .time{
-  
-    position: absolute;
-    top:-160px;
-    left: -50px;
-    color: antiquewhite;  
-   width: max-content;
-  }
-  .day{
       position: absolute;
-      top:-110px;
+      top: -230px;
+      left: -35px;
+      color: antiquewhite;
+    }
+    .time {
+      position: absolute;
+      top: -160px;
+      left: -50px;
+      color: antiquewhite;
+      width: max-content;
+    }
+    .day {
+      position: absolute;
+      top: -110px;
       left: -15px;
       font-size: 1rem;
-
-  }
-  .date{
-     position: absolute;
-      top:-100px;
-      left:-25px;
+    }
+    .date {
+      position: absolute;
+      top: -100px;
+      left: -25px;
       font-size: 3.5rem;
+    }
+  }
+  .someContent {
+    padding: 1rem;
   }
 }
-.someContent{
-    padding: 1rem;
-}
-}
 
-section.section-3{
-   @extend section.section-1;
-   .historyPane{
+section.section-3 {
+  @extend section.section-1;
+  .historyPane {
     border: 3px solid rgb(173, 114, 228);
     border-radius: 10px;
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
     margin-top: 6rem;
     width: 90%;
-h4{
-    text-align: center;
-    border-bottom: 1px solid blueviolet;
-    line-height: 2rem;
-    font-size: larger;
-}
-   }
-}
-
-
-section.section-4{
-   // @extend section.section-1;
-    border: 3px solid rgb(173, 114, 228);
-    border-radius: 10px;
-    width: 90%;
-    margin: 6rem auto;
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
-    padding: 0.5rem;
-     //height: 400px; 
-    h4{
-        border-bottom:  1px solid blueviolet;
-        text-align: center;
-        font-size: larger;
-
-        
-    }
-    div.testimoniesContainer{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem auto;
-        border-radius: 10px;
-        padding: 0.5rem;
-       //width: 500px;
-      //  height: 250px;
-      //border: 3px solid rgba(173, 114, 228,0.2);
-        background-color: aliceblue;
-      
-                    .testimony-1{
-                        width: 100%;
-                        .testimony-head{
-                           height: 30%;
-                           background: rgb(233, 238, 238);
-                           border-radius: 10px;
-                           position: relative;
-                              img{
-                            height: 70px;
-                            width: 70px;
-                            border-radius: 50%;
-                            object-fit: cover;
-                            object-position: top;
-                        }
-                        span{
-                            position: absolute;
-                           top: 30%;
-                           left: 30%;
-                           transform: translate(-30% -30%);
-                         // color: white;
-                            }
-                        }
-                    }
-                    }
-}
-footer{
-   // height: 50vh;
-   background-color: rgb(102, 102, 255);
-   color: white;
-   width: 100%;
-   address{
-      margin: 1.5rem 1.8rem;
-      text-decoration: none;
-
-a{
-    text-decoration: none;
-    list-style: none;
-color: rgb(254, 254, 255);
-    &:hover{
-        border-bottom: 1px solid white;
-    }
-}
-.contact-info{
-.h4{
-    //font-size: 1.5rem;
-    line-height: 1.5;
-    letter-spacing: .1rem;
-}
-div{
-    font-size: 1.1rem;
-    letter-spacing: .1rem;
-    margin-top: .5rem;
-}
-}
-.location{
-    margin-top: 1.2rem;
-    .h4{
-      //  font-size: 1.5rem;
-    line-height: 1.5;
-    letter-spacing: .1rem;
-    }
-    div{
-      font-size: 1.1rem;  
-      letter-spacing: .1rem;
-      margin-top: .5rem;
-    }
-}
-
-    }
-    .short-message{
-        margin: 1.5rem 1.8rem; 
-         width: 100%;
-         display: flex;
-        input{
-        height: 3rem;
-        width: 70%;
-        border: none;
-        outline: none;
-        border-radius: 10px;
-        padding: 5px;
-        font-size: 1.5rem;
-        }
-        button{
-            outline: none;
-            border: none;
-            background: none;
-            color:rgb(213, 213, 223);
-            font-size: 2rem;
-            padding: 0px 6px;
-            cursor: pointer;
-        }
-    }
-    .social-icons{
-        @include flexbox (row, space-between, center);
-        width: 50%;
-        margin: 1.8rem auto 0.5rem auto;
-        font-size: 1.5rem;
-        cursor: pointer;
-        svg{
-         &:hover{
-            transform: translateY(-5px);
-        }
-    }
-    }
-  
-   .copyright{
-       background-color: white;
-       color: blueviolet;
+    h4 {
       text-align: center;
+      border-bottom: 1px solid blueviolet;
+      line-height: 2rem;
+      font-size: larger;
+    }
+  }
+}
+
+section.section-4 {
+  // @extend section.section-1;
+  border: 3px solid rgb(173, 114, 228);
+  border-radius: 10px;
+  width: 90%;
+  margin: 6rem auto;
+  box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.5);
+  padding: 0.5rem;
+  //height: 400px;
+  h4 {
+    border-bottom: 1px solid blueviolet;
+    text-align: center;
+    font-size: larger;
+  }
+  div.testimoniesContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem auto;
+    border-radius: 10px;
+    padding: 0.5rem;
+    //width: 500px;
+    //  height: 250px;
+    //border: 3px solid rgba(173, 114, 228,0.2);
+    background-color: rgba(240, 248, 255, 0.795);
+
+    .testimony-1 {
+      width: 100%;
+      .testimony-head {
+        height: 30%;
+       // background: rgb(233, 238, 238);
+        border-radius: 10px;
+        position: relative;
+        img {
+          height: 70px;
+          width: 70px;
+          border-radius: 50%;
+          object-fit: cover;
+          object-position: top;
+        }
+        span {
+          position: absolute;
+          top: 30%;
+          left: 30%;
+          transform: translate(-30% -30%);
+          // color: white;
+        }
+      }
+    }
+  }
+}
+footer {
+  background-color: rgb(102, 102, 255);
+  color: white;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  grid-template-columns: repeat(2,1fr);
+  div.contact-info,
+  div.location{
+    margin: 0  1.8rem;
+    padding-top: 1.5rem;
+  
+    .h4{
+      line-height: 1.5;
+      letter-spacing: 0.1rem;
+      opacity: 0.6;
+     }
+     .contact-info-content,
+     .location-content{
+       margin-top: .8rem;
+       a{
+         text-decoration: none;
+         color: white;
+       }
+     }
+  }
+  div.short-message {
+    margin-left:  1.8rem;
+    margin-top: 1.5rem;
+    width: 100%;
+    grid-column: 1 / span 2;
+   .h4{
+    line-height: 1.5;
+    letter-spacing: 0.1rem;
+    opacity: 0.6;
    }
+    input {
+      height: 2.5rem;
+     margin-top: 1.5rem;
+      width: 70%;
+      border: none;
+      outline: none;
+      border-radius: 20px;
+      padding-left: 10px;
+      font-size: 1.5rem;
+    }
+    button {
+      outline: none;
+      border: none;
+      background: none;
+      color: rgb(213, 213, 223);
+      font-size: 2rem;
+      padding: 0px 6px;
+      cursor: pointer;
+    }
+  }
+  
+   div.Dev{
+    margin-left:  1.8rem;
+    padding-top: 1.5rem;
+       .h4{
+        line-height: 1.5;
+        letter-spacing: 0.1rem;
+        opacity: 0.6;
+       
+       }
+       .dev-content{
+          margin-top: .8rem;
+       }
+   }
+
+  .social-icons {
+    margin:  1.8rem;
+    padding-top: 1.5rem;
+    .h4{
+      line-height: 1.5;
+      letter-spacing: 0.1rem;
+      opacity: 0.6;
+    }
+    div.socialIcon{
+         margin-top: .8rem;
+         @include flexbox(row, space-between, center);
+         margin-top: 0.5rem;
+    svg {
+       cursor: pointer;
+       font-size: 1.5rem;
+      &:hover {
+        transform: translateY(-5px);
+      }
+    }
+}
+  }
+
+  .copyright {
+   line-height: 1.5;
+   letter-spacing: .1rem;
+   opacity: .7;
+    margin-top: 2rem;
+    color: whitesmoke;
+    text-align: center;
+    grid-column: 1 / span 2;
+  }
 }
