--- a/Styles/_scriptclass.scss
+++ b/Styles/_scriptclass.scss
@@ -1,9 +1,24 @@
-// .burger-close{
-//     opacity: 0;
-//     pointer-events: none;
-// }
-
 .nav-toggled{
    transform: translateX(0%) !important;
-
+}
+section.section-2,
+section.section-4
+{
+   position: relative;
+   div.prev, div.prev2{
+      position: absolute;
+     // background-color: red;
+      height: 80%;
+      width: 50%;
+      left: 0;
+      top: 20%;
+   }
+   div.next, div.next2{
+      position: absolute;
+     // background-color: blue;
+      height: 80%;
+      width: 50%;
+      left: 50%;
+      top: 20%;
+   }
 }
