--- a/src/Styles/_scriptclass.scss
+++ b/src/Styles/_scriptclass.scss
@@ -18,6 +18,7 @@ section.section-4
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      z-index: 100;
       svg{
          color: white;
          font-size: 3rem;
@@ -36,6 +37,7 @@ section.section-4
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      z-index: 100;
       svg{
          color: white;
          font-size: 3rem;
