--- a/src/Styles/mediaQueries/_XLandL.scss
+++ b/src/Styles/mediaQueries/_XLandL.scss
@@ -125,11 +125,8 @@ footer {
 
 }
 @media only screen and  (orientation: landscape) 
-// and (min-height: 700px)
 and (min-width: 550px) {
-// body{
-//   display: none;
-// }
+
   section.d-catch{
     
     .landingSection{
@@ -159,6 +156,14 @@ and (min-width: 550px) {
         width: 40% !important;
         transform: translate(-90%, -40%) !important;
      }
+     .brand-logo{
+      left: 20% !important;
+      top: 40% !important;
+      width: 40% !important;
+      height: 200px !important;
+      width: 200px !important;
+      transform: translate(-20%, -40%) !important;
+    }
      button{
          width: 12rem !important;
          height: 4rem !important;
@@ -172,6 +177,8 @@ and (min-width: 550px) {
     }
     }
     }
+
+
    main{
      margin-top: 7rem !important;
    }
