--- a/src/Styles/Landingpage.css
+++ b/src/Styles/Landingpage.css
@@ -313,8 +313,8 @@ section.section-4 div.next2 svg {
     height: 100% !important;
   }
   section.d-catch .landingSection img:hover {
-    -webkit-transform: scale(1.06 !important);
-            transform: scale(1.06 !important);
+    -webkit-transform: scale(1.06) !important;
+            transform: scale(1.06) !important;
   }
   section.d-catch .landingSection .backgroundCover {
     height: 100% !important;
@@ -398,8 +398,8 @@ section.section-4 div.next2 svg {
     height: 100% !important;
   }
   section.d-catch .landingSection img:hover {
-    -webkit-transform: scale(1.06 !important);
-            transform: scale(1.06 !important);
+    -webkit-transform: scale(1.06) !important;
+            transform: scale(1.06) !important;
   }
   section.d-catch .landingSection .backgroundCover {
     height: 100% !important;
