--- a/src/Styles/Landingpage.scss
+++ b/src/Styles/Landingpage.scss
@@ -281,7 +281,7 @@ footer {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(4, auto);
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   div.contact-info,
   div.location{
     margin: 0  1.8rem;
