added the fix for mobile

--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 $color-pr: rgb(252, 252, 252); 
-body{
+body, html{
    font-family: "Poppins" , sans-serif; 
    color: blueviolet;
   min-width: 100%;
