--- a/src/Styles/Landingpage.css
+++ b/src/Styles/Landingpage.css
@@ -5,7 +5,7 @@
           box-sizing: border-box;
 }
 
-body {
+body, html {
   font-family: "Poppins" , sans-serif;
   color: blueviolet;
   min-width: 100%;
